hiding scrollbar and fixing json

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,6 @@ body{
   background: var(--bg);
   color: var(--txt);
 }
+::-webkit-scrollbar{
+  display: none;
+}
